--- a/first-app/makefile
+++ b/first-app/makefile
@@ -12,4 +12,4 @@ local-expose: ## Expose service endpoint accessible via port-forward
 	kubectl port-forward --address 0.0.0.0 service/first-app 3000
 
 local-delete: ## Delete application from local minikube
-	kubectl delete -f=k8s/api-deployment.yaml,k8s/mysql-deployment.yaml,k8s/mysql-storage.yaml,k8s/mysql-secrets.yaml
+	kubectl delete -f=k8s/api-deployment.yaml
